isAlphabeticPalindrome solution